[gd_scene load_steps=5 format=2]

[ext_resource path="res://test/blendmode/b.jpg" type="Texture" id=1]
[ext_resource path="res://test/blendmode/a.jpg" type="Texture" id=2]
[ext_resource path="res://systems/style/materials/colordodge_material.tres" type="Material" id=3]
[ext_resource path="res://test/blendmode/blendtest.gd" type="Script" id=4]


[node name="blendtest" type="Node2D"]
script = ExtResource( 4 )

[node name="B" type="Sprite" parent="."]
position = Vector2( 1320, 296 )
texture = ExtResource( 1 )

[node name="A" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 1320, 296 )
texture = ExtResource( 2 )

[node name="B2" type="Sprite" parent="."]
position = Vector2( 808, 296 )
texture = ExtResource( 1 )

[node name="A2" type="Sprite" parent="."]
position = Vector2( 296, 295 )
texture = ExtResource( 2 )

[node name="BlendModeButton" type="OptionButton" parent="."]
margin_left = 1088.0
margin_top = 32.0
margin_right = 1166.0
margin_bottom = 52.0
text = "Normal"
items = [ "Normal", null, false, 0, null, "Overlay", null, false, 1, null, "Color dodge", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 40.0
margin_right = 136.0
margin_bottom = 54.0
text = "Foreground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 576.0
margin_top = 40.0
margin_right = 650.0
margin_bottom = 54.0
text = "Background"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fgopacity" type="HSlider" parent="."]
margin_left = 1224.0
margin_top = 32.0
margin_right = 1551.0
margin_bottom = 48.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="BlendModeButton" to="." method="_on_BlendModeButton_item_selected"]
[connection signal="value_changed" from="fgopacity" to="." method="_on_fgopacity_value_changed"]
